# MultiYOLO-Service

./: .env.example  .gitignore  CURL_EXAMPLES.md  README.md  main.py  pyproject.toml  requirements.txt
core/: __init__.py  config.py  interfaces.py  logging_config.py
services/: __init__.py  detection.py  model_manager.py
services/detectors/: __init__.py  torch_detector.py
